Working test version of Trello Power-Up

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Itero Power-Up</title>
-  </head>
+  <head><title>Itero Power-Up</title></head>
   <body>
     <script src="client.js"></script>
   </body>
