Working test version of Trello Power-Up

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head><title>Itero Power-Up</title></head>
+  <head>
+    <title>Itero Power-Up</title>
+    <script src="client.js"></script> <!-- ✅ this line is critical -->
+  </head>
   <body>
-    <script src="client.js"></script>
+    <!-- can stay empty -->
   </body>
 </html>
