Fix: include Trello Power-Up SDK

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,8 @@
 <html>
   <head>
     <title>Itero Power-Up</title>
-    <script src="client.js"></script> <!-- ✅ this line is critical -->
+    <script src="https://p.trellocdn.com/power-up.min.js"></script> <!-- ✅ Required Trello SDK -->
+    <script src="client.js"></script> <!-- ✅ Your logic -->
   </head>
-  <body>
-    <!-- can stay empty -->
-  </body>
+  <body></body>
 </html>
