Refactor: Move files to public folder and update paths

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>Itero Power-Up</title>
-    <script src="https://p.trellocdn.com/power-up.min.js"></script> <!-- ✅ Required Trello SDK -->
-    <script src="client.js"></script> <!-- ✅ Your logic -->
+    <script src="https://p.trellocdn.com/power-up.min.js"></script>
+    <script src="public/client.js"></script> <!-- ✅ updated path -->
   </head>
   <body></body>
 </html>
