--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Itero Power-Up</title>
-    <script src="https://p.trellocdn.com/power-up.min.js"></script>
-    <script src="public/client.js"></script> <!-- ✅ updated path -->
-  </head>
-  <body></body>
+ <head>
+   <title>Itero Power-Up</title>
+   <script src="https://p.trellocdn.com/power-up.min.js"></script>
+   <script src="/powerup.js" type="module"></script>
+   <script src="/client.js" type="module"></script>
+ </head>
+ <body>
+   <div id="root"></div>
+ </body>
 </html>
