--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,8 +3,8 @@
  <head>
    <title>Itero Power-Up</title>
    <script src="https://p.trellocdn.com/power-up.min.js"></script>
-   <script src="/powerup.js" type="module"></script>
-   <script src="/client.js" type="module"></script>
+   <!-- <script src="/powerup.js" type="module"></script> -->
+   <!-- <script src="/client.js" type="module"></script> -->
  </head>
  <body>
    <div id="root"></div>
