--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,8 +4,7 @@
     <title>Itero Power-Up</title>
     <script src="https://p.trellocdn.com/power-up.min.js"></script>
     <script src="/powerup.js" type="module"></script>
-    <script src="/client.js" type="module"></script>
-  </head>
+    <script src="/client.js"></script></head>
   <body>
     <div id="root"></div>
   </body>
