Fix Trello iframe and dashboard split

--- a/frontend/public/popup.html
+++ b/frontend/public/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Itero Power-Up</title>
+    <title>Itero Trello Power-Up</title>
   </head>
   <body>
     <script src="https://p.trellocdn.com/power-up.min.js"></script>
