--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Itero Power-Up</title>
-    <script src="https://p.trellocdn.com/power-up.min.js"></script>
-    <script src="/powerup.js" type="module"></script>
-    <script src="/client.js"></script></head>
+  </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+    <!-- DO NOT load client.js or powerup.js here -->
   </body>
 </html>
