Migrate to SPA-based Trello Power-Up with index.html popup entry

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Itero Power-Up</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://p.trellocdn.com/power-up.min.js"></script> <!-- ✅ Trello SDK -->
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-    <!-- DO NOT load client.js or powerup.js here -->
+    <script type="module" src="/src/main.jsx"></script> <!-- ✅ Boot React -->
   </body>
 </html>
