--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <title>Itero Power-Up</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://p.trellocdn.com/power-up.min.js"></script> <!-- ✅ Trello SDK -->
+    <!-- No Trello SDK here -->
+    <!-- Optional: silence Apollo banner if you still see it -->
+    <!-- <script src="/disable-apollo-devtools.js"></script> -->
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script> <!-- ✅ Boot React -->
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
