--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <title>Itero Power-Up</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- No Trello SDK here -->
-    <!-- Optional: silence Apollo banner if you still see it -->
-    <!-- <script src="/disable-apollo-devtools.js"></script> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="https://p.trellocdn.com/power-up.min.js"></script>
   </head>
   <body>
     <div id="root"></div>
